# async_fastapi_vs_sync_flask

./: Makefile  README.md  main_fastapi.py  main_flask.py  pyproject.toml  test_speed.py
